[workspace]
members = ["packages/api", "packages/main-ui"]
exclude = ["deps"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Biyard"]
description = "d.AGIT: Digital Assets Guardianship & Interchange Terminal"
documentation = "https://dagit.club"
edition = "2021"
repository = "https://github.com/biyard/dagit"
license = "Apache-2.0"

[workspace.dependencies]
dioxus = { version = "0.6.3" }
dioxus-logger = { version = "0.6.2" }

serde = { version = "1.0.218" }
reqwest = { version = "0.12.12" }
#rust-sdk
by-axum = { path = "deps/rust-sdk/packages/by-axum" }
by-components = { path = "deps/rust-sdk/packages/by-components" }
by-macros = { path = "deps/rust-sdk/packages/by-macros" }
by-types = { path = "deps/rust-sdk/packages/by-types" }
dioxus-translate = { path = "deps/rust-sdk/packages/dioxus-translate", features = [
    "ko",
] }
dioxus-aws = { path = "deps/rust-sdk/packages/dioxus-aws" }
rest-api = { path = "deps/rust-sdk/packages/rest-api" }
easy-dynamodb = { path = "deps/rust-sdk/packages/easy-dynamodb" }

#FIXME: `rest-api` crate has `getrandom` dependency, but it's listed here
getrandom = { version = "0.2", features = ["js"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
